Fix slime img overflow

--- a/src/components/slime-lab/slime-lab-inventory/slime-lab-inventory.css
+++ b/src/components/slime-lab/slime-lab-inventory/slime-lab-inventory.css
@@ -56,8 +56,11 @@
 
 .slime-inventory-img {
   max-width: 100%;
-  padding: 10px;
-  border-radius: 8px;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  flex-shrink: 1;
 }
 
 .slime-inventory-item:active {
